# cpplite

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
.cache/clangd/index/: osfile.cpp.F529F65B78880A91.idx  osfile.h.2B91F902DF2CBB36.idx  page_manager.cpp.4B3DBC8D154ABF53.idx  pager.cpp.D9EF954B492A69CA.idx  pager.h.B21148619FA0760D.idx  shared.h.C2FBC811C58CEA88.idx  test_basic_file_ops.cpp.38EC6559BA99498C.idx  test_main.cpp.DF423635767A97FE.idx  test_page_manager.cpp.DC65BDB95E05BB5A.idx  test_pager.cpp.B7369A0FB3A835F9.idx  test_utils.cpp.28EB30B16F74B937.idx  test_utils.h.856BFFE7B9DED644.idx
lib/: encoding.cpp  encoding.h  lex.y  lex.yy.c  lex.yy.cpp  parse.gv  parse.tab.c  parse.tab.cpp  parse.tab.h  parse.tab.hpp  parse.vcg  parse.y  parser.cpp  parser.h  query.h  shared.h  utils.cpp  utils.h
lib/ast/: ast.cpp  ast.h
lib/binder/: binder.cpp  binder.h
lib/btree/: btree.cpp  btree.h  utils.cpp
lib/catalog/: catalog.cpp  catalog.h  schema.h  serialize.cpp
lib/executor/: ddl.cpp  ddl.h
lib/pager/: base_page.h  page_manager.cpp  pager.cpp  pager.h
lib/pager/bufferpool/: bufferpool.cpp  bufferpool.h  pageguard.cpp
lib/pager/first_page/: first_page.h  first_page_manager.cpp
lib/pager/free_page/: free_page.h  free_page_manager.cpp
lib/pager/leaf_page/: leaf_page.h  leaf_page_manager.cpp
lib/pager/node_page/: node_page.h  node_page_manager.cpp
lib/pager/overflow_page/: overflow_page.h  overflow_page_manager.cpp
lib/parser/: SQLiteLexer.cpp  SQLiteLexer.h  SQLiteParser.cpp  SQLiteParser.h  SQLiteParserBaseListener.h  SQLiteParserBaseVisitor.cpp  SQLiteParserBaseVisitor.h  SQLiteParserListener.cpp  SQLiteParserListener.h  SQLiteParserVisitor.cpp  SQLiteParserVisitor.h
lib/record/: record.cpp  record.h
lib/storage/: filecache.cpp  filecache.h  storage.cpp  storage.h  storage_utils.h
lib/vdbe/: vdbe.cpp  vdbe.h
lib/vfs/: localfs.cpp  localfs.h  osfile.cpp  osfile.h  vfs.h
tests/: db_test_fixture.h  test_main.cpp  test_parser.cpp  test_utils.cpp  test_utils.h
tests/binder/: test_binder.cpp
tests/btree/: btree_test_utils.cpp  btree_test_utils.h  test_btree_cursor.cpp  test_btree_cursor_insert.cpp  test_btree_delete.cpp  test_btree_insert.cpp  test_btree_move.cpp
tests/btree/builder/: btree_builder.cpp  btree_builder.h  btree_validator.cpp  test_builder.cpp
tests/btree/configs/: basic1.yaml  basic2.yaml  basic3.yaml  deep1.yaml  deep2.yaml  delete1.yaml
tests/catalog/: test_catalog.cpp
tests/executor/: test_ddl_executor.cpp
tests/pager/: test_first_page_manager.cpp  test_leaf_page_manager.cpp  test_node_page_manager.cpp  test_overflow_page_manager.cpp  test_page_manager.cpp  test_pageguard.cpp  test_pager.cpp
tests/record/: test_record.cpp
tests/storage/: test_filecache.cpp  test_storage.cpp
tests/vfs/: test_basic_file_ops.cpp  test_localfs.cpp
